<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2EEF21"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/web_developer1"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonFB"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="96dp"
        android:background="@color/purple_700"
        android:text="@string/sign_in_with_facebook1"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/facebook"
        app:iconGravity="start"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonIOS"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="96dp"
        android:background="#000000"
        android:text="@string/sign_in_with_ios1"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/apple"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="177dp"
        android:text="@string/copyrigth"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIOS"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="18dp"
        android:layout_height="33dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="158dp"

        app:layout_constraintEnd_toStartOf="@+id/text2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIOS"
        app:srcCompat="@drawable/copyright"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>